--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compression": "^1.7.4",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.7.1"
   }
 }
